hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__use_function_in_function_target_exists.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "ns1",
            IdentId(2) => "f",
            IdentId(3) => "ns2",
            IdentId(4) => "g",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "boolean",
            IdentId(8) => "div",
            IdentId(9) => "eq",
            IdentId(10) => "ge",
            IdentId(11) => "gt",
            IdentId(12) => "le",
            IdentId(13) => "lt",
            IdentId(14) => "mul",
            IdentId(15) => "neg",
            IdentId(16) => "neq",
            IdentId(17) => "number",
            IdentId(18) => "sub",
            IdentId(19) => "void",
        ],
        identifier_refs: [
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(2),
                    span: 8:17; [147, 148],
                    bound: Bound(21),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(8),
                    ],
                ),
                span: 3:21; [45, 47],
                typed: Typed(2),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(2),
                        span: 8:17; [147, 148],
                    },
                ),
                span: 8:17; [147, 148],
                typed: Typed(9),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: FunctionCall(
                    ExprId(1),
                    [],
                ),
                span: 8:17; [147, 150],
                typed: Typed(1),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(4),
                    ],
                ),
                span: 6:21; [102, 165],
                typed: Typed(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        bound: Bound(1),
                    },
                    InputId(0),
                    [
                        StmtId(2),
                        StmtId(6),
                        StmtId(7),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: LetFn(
                    Identifier {
                        id: IdentId(2),
                        span: 3:17; [41, 42],
                        bound: Bound(21),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                        typed: Typed(1),
                    },
                    Provided(
                        ExprId(0),
                    ),
                ),
                span: 3:13; [37, 47],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Namespace(
                    Identifier {
                        id: IdentId(1),
                        span: 2:19; [19, 22],
                        bound: Bound(2),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 4:9; [56, 57],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Ret(
                    Some(
                        ExprId(2),
                    ),
                    Implicit,
                ),
                span: 8:17; [147, 151],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: LetFn(
                    Identifier {
                        id: IdentId(4),
                        span: 6:17; [98, 99],
                        bound: Bound(22),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                        typed: Typed(1),
                    },
                    Provided(
                        ExprId(3),
                    ),
                ),
                span: 6:13; [94, 165],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: Namespace(
                    Identifier {
                        id: IdentId(3),
                        span: 5:19; [76, 79],
                        bound: Bound(3),
                    },
                    InputId(0),
                    [
                        StmtId(5),
                    ],
                ),
                span: 10:9; [174, 175],
            },
            StmtId(7) => Statement {
                id: StmtId(7),
                kind: Namespace(
                    Identifier {
                        id: IdentId(5),
                        span: 12:11; [195, 199],
                        bound: Bound(4),
                    },
                    InputId(0),
                    [],
                ),
                span: 12:17; [201, 202],
            },
            StmtId(8) => Statement {
                id: StmtId(8),
                kind: Ret(
                    None,
                    Implicit,
                ),
                span: 3:21; [45, 47],
            },
        ],
        type_defs: [],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(2),
                        ],
                        IdentId(3): [
                            SymbolId(3),
                        ],
                        IdentId(5): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(1),
                    {
                        IdentId(2): [
                            SymbolId(21),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Namespace(
                    IdentId(3),
                    {
                        IdentId(4): [
                            SymbolId(22),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Namespace(
                    IdentId(5),
                    {
                        IdentId(6): [
                            SymbolId(20),
                        ],
                        IdentId(7): [
                            SymbolId(7),
                        ],
                        IdentId(8): [
                            SymbolId(19),
                        ],
                        IdentId(9): [
                            SymbolId(17),
                            SymbolId(18),
                        ],
                        IdentId(10): [
                            SymbolId(16),
                        ],
                        IdentId(11): [
                            SymbolId(15),
                        ],
                        IdentId(12): [
                            SymbolId(14),
                        ],
                        IdentId(13): [
                            SymbolId(13),
                        ],
                        IdentId(14): [
                            SymbolId(12),
                        ],
                        IdentId(15): [
                            SymbolId(11),
                        ],
                        IdentId(16): [
                            SymbolId(9),
                            SymbolId(10),
                        ],
                        IdentId(17): [
                            SymbolId(6),
                        ],
                        IdentId(18): [
                            SymbolId(8),
                        ],
                        IdentId(19): [
                            SymbolId(5),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(19),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(17),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(7),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: LetFn(
                    IdentId(2),
                    StmtId(1),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(9),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: LetFn(
                    IdentId(4),
                    StmtId(5),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(9),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Function(
                [],
                TypeId(1),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(0): [
                    Implicit(
                        None,
                    ),
                ],
                ExprId(3): [
                    Implicit(
                        Some(
                            ExprId(2),
                        ),
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
